.devops/manifests/service-PRF.yml
apiVersion: v1
kind: Service
metadata:
  name: pmmockpaymentgatewayprf
spec:
  type: ClusterIP
  ports:
    - port: 8081
  selector:
    app: pmmockpaymentgatewayprf
