.devops/manifests/service-SIT.yml
apiVersion: v1
kind: Service
metadata:
  name: mockpaymentgatewaysit
spec:
  type: ClusterIP
  ports:
    - port: 8081
  selector:
    app: mockpaymentgatewaysit
