.devops/manifests/ingress-SIT.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "130"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: pmmockingress
  namespace: mockpaymentgateway-sit
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: mockpaymentgatewaysit
                port:
                  number: 7954
            path: /mockpaymentgateway(/|$)(.*)
            pathType: Prefix
status:
  loadBalancer:
    ingress:
      - ip: 10.70.66.200
